@@ -1,18 +1,19 @@
 package registre.service;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
-import registre.dto.Code;
 import registre.dto.CodesListDto;
-import registre.dto.CodesListExternalLink;
+import registre.dto.CodesListExternalLinkDto;
 import registre.entity.CodesListEntity;
-import registre.entity.MetadataEntity;
+import registre.entity.CodesListExternalLinkEntity;
+import registre.repository.CodesListExternalLinkRepository;
 import registre.repository.CodesListRepository;
 
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -26,78 +27,100 @@ class CodesListPublicationServiceIntegrationTest {
     private CodesListPublicationService service;
 
     @Autowired
-    private CodesListRepository repository;
+    private CodesListRepository codesListRepository;
+
+    @Autowired
+    private CodesListExternalLinkRepository externalLinkRepository;
+
+    @Autowired
+    private ObjectMapper objectMapper;
 
     @Test
-    void testCreateAndFetchCodesList() {
-        CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
-        String id = service.createCodesList(dto);
+    void testCreateAndFetchCodesList_WithRecord() {
+        CodesListDto dto = new CodesListDto(
+                null,
+                null,
+                null,
+                objectMapper.createArrayNode()
+        );
 
-        Optional<CodesListEntity> entity = repository.findById(id);
+        UUID id = service.createCodesList(dto);
+
+        Optional<CodesListEntity> entity = codesListRepository.findById(id);
         assertTrue(entity.isPresent());
         assertEquals(id, entity.get().getId());
     }
 
     @Test
     void testUpdateContentAndVerify() {
-        CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
-        String id = service.createCodesList(dto);
+        CodesListDto dto = new CodesListDto(
+                null,
+                null,
+                null,
+                objectMapper.createArrayNode()
+        );
 
-        Code code = new Code();
-        code.setId("code1");
-        code.setLabel("Label1");
-        service.updateContent(id, List.of(code));
+        UUID id = service.createCodesList(dto);
 
-        CodesListEntity updated = repository.findById(id).orElseThrow();
-        assertEquals(1, updated.getContent().size());
-        assertEquals("code1", updated.getContent().getFirst().getId());
+        ObjectNode codeNode = objectMapper.createObjectNode();
+        codeNode.put("id", "code1");
+        codeNode.put("label", "Label1");
+
+        service.updateContent(id, objectMapper.createArrayNode().add(codeNode));
+
+        CodesListEntity updated = codesListRepository.findById(id).orElseThrow();
+        JsonNode content = updated.getContent();
+        assertNotNull(content);
+        assertTrue(content.isArray());
+        assertEquals(1, content.size());
+        assertEquals("code1", content.get(0).get("id").asText());
     }
 
     @Test
     void testUpdateExternalLink() {
-        CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
-        String id = service.createCodesList(dto);
+        CodesListDto dto = new CodesListDto(
+                null,
+                null,
+                null,
+                objectMapper.createArrayNode()
+        );
 
-        CodesListEntity entity = repository.findById(id).orElseThrow();
-        MetadataEntity metadata = new MetadataEntity();
-        metadata.setId(UUID.randomUUID());
-        entity.setMetadata(metadata);
+        UUID id = service.createCodesList(dto);
 
-        repository.save(entity);
+        CodesListExternalLinkDto link = new CodesListExternalLinkDto("ExternalLink1", "v1");
 
-        CodesListExternalLink link = new CodesListExternalLink();
-        link.setVersion("vX");
+        CodesListExternalLinkEntity externalLinkEntity = new CodesListExternalLinkEntity();
+        externalLinkEntity.setId("ExternalLink1");
+        externalLinkEntity.setVersion("v1");
+        externalLinkRepository.save(externalLinkEntity);
 
         service.updateExternalLink(id, link);
-        CodesListEntity updated = repository.findById(id).orElseThrow();
-        assertNotNull(updated.getMetadata());
-        assertNotNull(updated.getMetadata().getExternalLink());
-        assertEquals("vX", updated.getMetadata().getExternalLink().getVersion());
-    }
 
-    static class SearchConfig {
-        public String type;
-
-        public SearchConfig(String type) {
-            this.type = type;
-        }
+        CodesListEntity updated = codesListRepository.findById(id).orElseThrow();
+        assertEquals("v1", updated.getCodesListExternalLink().getVersion());
     }
 
     @Test
     void testUpdateSearchConfiguration() {
-        CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
-        String id = service.createCodesList(dto);
+        CodesListDto dto = new CodesListDto(
+                null,
+                null,
+                null,
+                objectMapper.createArrayNode()
+        );
 
-        SearchConfig config = new SearchConfig("simple");
+        UUID id = service.createCodesList(dto);
 
-        service.updateSearchConfiguration(id, config);
+        ObjectNode configNode = objectMapper.createObjectNode();
+        configNode.put("type", "simple");
 
-        CodesListEntity updated = repository.findById(id).orElseThrow();
-        assertNotNull(updated.getSearchConfiguration());
-        assertTrue(updated.getSearchConfiguration().getJsonContent().contains("simple"));
+        service.updateSearchConfiguration(id, configNode);
+
+        CodesListEntity updated = codesListRepository.findById(id).orElseThrow();
+        JsonNode searchConfig = updated.getSearchConfiguration();
+
+        assertNotNull(searchConfig);
+        assertTrue(searchConfig.has("type"));
+        assertEquals("simple", searchConfig.get("type").asText());
     }
 }
